--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,20 @@
             <version>2.26-b04</version>
         </dependency>
         
-        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+<!--         https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.2.2</version>
         </dependency>
+        
+         https://mvnrepository.com/artifact/org.json/json 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20170516</version>
+        </dependency>-->
+
 
 
         
