--- a/pom.xml
+++ b/pom.xml
@@ -38,31 +38,29 @@
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
-        </dependency>
-        
+        </dependency>        
         <dependency>
             <groupId>org.glassfish.jersey.archetypes</groupId>
             <artifactId>jersey-quickstart-webapp</artifactId>
             <version>2.26-b04</version>
-        </dependency>
-        
+        </dependency>    
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>    
 <!--         https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.2.2</version>
-        </dependency>
-        
+        </dependency>        
          https://mvnrepository.com/artifact/org.json/json 
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20170516</version>
-        </dependency>-->
-
-
-
-        
+        </dependency>-->        
     </dependencies>
 
     <build>
