--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ src/main/webapp/WEB-INF/web\.xml
 pom\.xml
 
 src/main/webapp/WEB-INF/glassfish-resources\.xml
+
+src/main/resources/META-INF/persistence\.xml
