--- a/pom.xml
+++ b/pom.xml
@@ -43,24 +43,25 @@
             <groupId>org.glassfish.jersey.archetypes</groupId>
             <artifactId>jersey-quickstart-webapp</artifactId>
             <version>2.26-b04</version>
-        </dependency>    
+        </dependency>   
+
+      <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-server -->
+<dependency>
+    <groupId>org.glassfish.jersey.core</groupId>
+    <artifactId>jersey-server</artifactId>
+    <version>2.26-b04</version>
+</dependency>
+
+
+
+
+          
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.7.0</version>
         </dependency>    
-<!--         https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core 
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.2.2</version>
-        </dependency>        
-         https://mvnrepository.com/artifact/org.json/json 
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20170516</version>
-        </dependency>-->        
+     
     </dependencies>
 
     <build>
