--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>rsvier.resources</param-value>
         </init-param>
+           <init-param>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>rsvier.security.RestApplicationConfig</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
